@@ -2,10 +2,10 @@ package me.zombie_striker.qg.armor;
 
 import java.util.List;
 
+import com.cryptomorin.xseries.XAttribute;
 import me.zombie_striker.customitemmanager.CustomBaseObject;
 import me.zombie_striker.customitemmanager.CustomItemManager;
 import org.bukkit.Sound;
-import org.bukkit.attribute.Attribute;
 import org.bukkit.attribute.AttributeModifier;
 import org.bukkit.entity.Player;
 import org.bukkit.inventory.ItemStack;
@@ -107,7 +107,7 @@ public class ArmorObject extends CustomBaseObject implements ArmoryBaseObject {
 		ItemStack item = CustomItemManager.getItemType("gun").getItem(this.getItemData().getMat(),this.getItemData().getData(),this.getItemData().getVariant());
 		ItemMeta itemMeta = item.getItemMeta();
 		if (itemMeta != null && protection != 0) {
-			itemMeta.addAttributeModifier(Attribute.GENERIC_ARMOR, new AttributeModifier("generic.armor", protection, AttributeModifier.Operation.ADD_NUMBER));
+			itemMeta.addAttributeModifier(XAttribute.ARMOR.get(), new AttributeModifier(XAttribute.ARMOR.name(), protection, AttributeModifier.Operation.ADD_NUMBER));
 			item.setItemMeta(itemMeta);
 		}
 
