@@ -1,6 +1,7 @@
 2.0.20
   - Added crossbow animation
   - Fixed gun glow
+  - Fixed armor protection
 
 2.0.19
   - Fixed resourcepack for 1.21.x
